issue https://github.com/beryx/badass-jlink-plugin/issues/141