@@ -8,7 +8,7 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-mainClassName = 'demo.main/com.example.demo.DemoApplication'
+mainClassName = 'com.example.demo.DemoApplication'
 sourceCompatibility = 11
 targetCompatibility = 11
 
@@ -27,7 +27,13 @@ ext {
     dbDefaultSchema = 'public'
 }
 
+configurations {
+   springFactoriesHolder { transitive = false }
+}
+
 dependencies {
+    springFactoriesHolder 'org.springframework.boot:spring-boot'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-jooq'
     jooqRuntime 'org.postgresql:postgresql'
@@ -41,7 +47,6 @@ dependencies {
     annotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
 }
-
 
 jooq {
     version = '3.13.0'
@@ -73,5 +78,52 @@ jooq {
                 packageName = 'com.example.demo'
             }
         }
+    }
+}
+
+tasks.jar.enabled = true
+
+prepareMergedJarsDir.doLast {
+    // extract and merge META-INF/spring.factories from springFactoriesHolder
+    def factories = configurations.springFactoriesHolder.files.collect {
+        def props = new Properties()
+        props.load(zipTree(it).matching { include 'META-INF/spring.factories' }.singleFile.newInputStream())
+        props
+    }
+    def mergedProps = new Properties()
+    factories.each { props ->
+        props.each { key, value ->
+            def oldVal = mergedProps[key]
+            mergedProps[key] = oldVal ? "$oldVal,$value" : value
+        }
+    }
+    def content = mergedProps.collect { key, value ->
+        def v = (value as String).replace(',', ',\\\n')
+        "$key=$v"
+    }.join('\n\n')
+    mkdir("$jlinkBasePath/META-INF")
+    new File("$jlinkBasePath/META-INF/spring.factories").text = content
+
+    // insert META-INF/spring.factories into the main jar
+    ant.zip(update: "true", destfile: jar.archivePath, keepcompression: true) {
+        fileset(dir: "$jlinkBasePath", includes: 'META-INF/**')
+    }
+}
+
+jlink {
+    mergedModule {
+        uses 'ch.qos.logback.classic.spi.Configurator'
+        excludeProvides service: 'org.apache.logging.log4j.spi.Provider'
+        excludeProvides service: 'reactor.blockhound.integration.BlockHoundIntegration'
+    }
+
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        jvmArgs = [
+            '--add-reads', 'com.example.merged.module=demo.main',
+            '--add-opens', 'demo.main/com.example.demo=com.example.merged.module',
+            '--add-opens', 'java.base/java.lang=com.example.merged.module',
+            '--add-opens', 'java.base/java.io=com.example.merged.module',
+        ]
     }
 }
